--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
         {
           소속: "서대문구 평생학습관",
           작가명: "한미화",
-          작품명: "",
+          작품명: "삶 속에서 보석을 발견하며",
           파일링크: "epub/한미화작가_f.epub",
           표지: "resources/한미화작가_f.jpg",
         },
