--- a/viewer.html
+++ b/viewer.html
@@ -493,10 +493,11 @@
       const DATASET = [
         {
           소속: "서대문구 평생학습관",
-          작가명: "구포진",
+          작가명: "구희진",
           작품명: "Stage in the FOREST 숲속 무대",
-          파일링크: "epub/구포진작가_f.epub",
-          표지: "resources/구포진작가_f.jpg",
+          파일링크: "epub/구희진작가_f.epub",
+          표지: "resources/구희진작가_f.jpg",
+          pdf: "resources/구희진작가_f.pdf",
         },
         {
           소속: "서대문구 평생학습관",
@@ -504,6 +505,7 @@
           작품명: "희망안에서",
           파일링크: "epub/김미연작가_f.epub",
           표지: "resources/김미연작가_f.jpg",
+          pdf: "resources/김미연작가_f.pdf",
         },
         {
           소속: "서대문구 평생학습관",
@@ -518,6 +520,7 @@
           작품명: "오늘의 나를 만든 어제의 숨결",
           파일링크: "epub/김조세린작가_f.epub",
           표지: "resources/김조세린작가_f.jpg",
+          pdf: "resources/김조세린작가_f.pdf",
         },
         {
           소속: "서대문구 평생학습관",
@@ -525,6 +528,7 @@
           작품명: "고통을 넘어 희망으로",
           파일링크: "epub/박진경작가_f.epub",
           표지: "resources/박진경작가_f.jpg",
+          pdf: "resources/박진경작가_f.pdf",
         },
         {
           소속: "서대문구 평생학습관",
@@ -532,6 +536,7 @@
           작품명: "스쳐간 순간들이 모여 내 안에 길을 놓았다",
           파일링크: "epub/오진경작가_f.epub",
           표지: "resources/오진경작가_f.jpg",
+          pdf: "resources/오진경작가_f.pdf",
         },
         {
           소속: "서대문구 평생학습관",
